camera.py file added

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -50,11 +50,12 @@
                 <input type="submit" name="Process" >
               </div>
         </form>
-        <div>
-          <img src="{{image}}" alt="detect">
+        <div style="justify-content:center ; margin-top: 30px ; display: flex;">
+          <img src="{{url_for('video')}}">
         </div>
     </div>
-    
+
+       
 
 
 
