face detection web app using videostream

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -44,17 +44,19 @@
         </div>
       </nav>
     <div class="container">
-        <form method="POST", action="/video">
+       <h1>Face detecion...</h1>
+        <!-- <form method="POST", action="/video">
             <div  class="input-group mb-3 mt-3">
                 <input name="img" type="file" accept="image*/" class="form-control" id="inputGroupFile02">
                 <input type="submit" name="Process" >
               </div>
-        </form>
+        </form> -->
         <div style="justify-content:center ; margin-top: 30px ; display: flex;">
           <img style="border: 10px black double;" src="{{url_for('video')}}">
         </div>
     </div>
 
+    
        
 
 
