--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>bioAge</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
@@ -50,7 +50,11 @@
                 <input name="img" type="file" accept="image*/" class="form-control" id="inputGroupFile02">
                 <input type="submit" name="Process" >
               </div>
-        </form> -->
+        </form>
+        <a href="/video">
+          <button type="button" class="btn btn-primary">VideoStream</button>
+        </a> -->
+        
         <div style="justify-content:center ; margin-top: 30px ; display: flex;">
           <img style="border: 10px black double;" src="{{url_for('video')}}">
         </div>
