--- a/prosperityWebApp/prosperity/templates/otp.html
+++ b/prosperityWebApp/prosperity/templates/otp.html
@@ -29,19 +29,44 @@
             <div class="right-div">
               <p class="rd1">Prosperous your life with</p>
               <p class="rd2">Prosperity</p>
-              <p class="rd3">Login/Create account</p>
-              <p class="rd4">10 Digit mobile number</p>
-              <input type="tel" id="phone" name="phone" placeholder="+91" required>
-              <button style="margin-left:52px" class="login"><a href="/otp"><p class="para">Log in</p></a></button>
-              <a class="rd5" href="">Explore as a Guest<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
-              </svg></a> 
+              <p class="rd3">Verify Mobile No</p>
+              <p class="rd4">Enter 6 Digit otp</p>
+              <div style="margin-left: 50px; margin-right: 50px;" id="otp" class="inputs d-flex flex-row justify-content-center mt-2">  
+                <input class="m-2 text-center form-control rounded" type="text" id="first" maxlength="1" />
+                <input class="m-2 text-center form-control rounded" type="text" id="second" maxlength="1" /> 
+                <input class="m-2 text-center form-control rounded" type="text" id="third" maxlength="1" />
+                <input class="m-2 text-center form-control rounded" type="text" id="fourth" maxlength="1" /> 
+                <input class="m-2 text-center form-control rounded" type="text" id="fifth" maxlength="1" />
+                <input class="m-2 text-center form-control rounded" type="text" id="sixth" maxlength="1" /> 
+            </div>
+              <button style="margin-left: 52px" class="login"><a href="/otp/yourself"><p class="para">Verify</p></a></button>
+              <div class="row">
+                <div class="col">
+                  <a style="margin-left: 50px; font-family: 'Poppins';
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 14px;
+                  line-height: 21px;
+                  color: #4C49CA;
+                  opacity: 0.7;" href="">Resend OTP</a> 
+                </div>
+                <div class="col">
+                  <a style="'Poppins';
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 14px;
+                  line-height: 21px;
+                  color: #4C49CA;
+                  opacity: 0.7;" href="">Change Mobile Number</a> 
+                </div>
+              </div>
+              
               <p class="tnc1" >By Log in, i accept the</p>
               <p class="tnc2">Terms & conditions & Privacy policy</p>
             </div>
             <p class="app-button">Get the app</p>
             <div style="margin-left: 100px; margin-right:395px" class="row">
-              <div id="ps1" class="col-sm">
+              <div  id="ps1" class="col-sm">
                 <img class="playstore1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Download_on_the_App_Store_Badge.svg/2560px-Download_on_the_App_Store_Badge.svg.png" alt="">
               </div>
               <div class="col-sm">
