--- a/prosperityWebApp/prosperity/templates/yourself.html
+++ b/prosperityWebApp/prosperity/templates/yourself.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Prosperity</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'index.css' %}">
+    <link rel="stylesheet" href="{% static 'yourself.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -27,26 +27,29 @@
         </div>
         <div class="col">
             <div class="right-div">
-              <p class="rd1">Prosperous your life with</p>
-              <p class="rd2">Prosperity</p>
-              <p class="rd3">Login/Create account</p>
-              <p class="rd4">10 Digit mobile number</p>
-              <input type="tel" id="phone" name="phone" placeholder="+91" required>
-              <button style="margin-left:52px" class="login"><a href="/otp"><p class="para">Log in</p></a></button>
-              <a class="rd5" href="">Explore as a Guest<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
-              </svg></a> 
-              <p class="tnc1" >By Log in, i accept the</p>
-              <p class="tnc2">Terms & conditions & Privacy policy</p>
+              <p class="rd1">Tell Us,</p>
+              <p class="rd2">About Yourself</p>
+              <p class="rd3">This information let us know you better for </p>
+              <p class="rd4">your growth</p>
+              <svg style="width: 100px;
+              height: 100px;
+              left: 940px;
+              margin-left: 38%;
+              margin-top:8%;
+              color: #BFBEFC
+              border-radius: 1000px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+              </svg>
+              
+              <p class="rd5"><a href="">Add Profile Picture</a></p>
+              <p class="rd6">Hey,</p>
+              <p class="rd7">What's Your Name?</p>
+              <p class="rd8">Ex. Shiv</p>
+              <button style="margin-left: 52px" class="login"><p class="para">Continue</p></button>
+            
             </div>
-            <p class="app-button">Get the app</p>
-            <div style="margin-left: 100px; margin-right:395px" class="row">
-              <div id="ps1" class="col-sm">
-                <img class="playstore1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Download_on_the_App_Store_Badge.svg/2560px-Download_on_the_App_Store_Badge.svg.png" alt="">
-              </div>
-              <div class="col-sm">
-                <img class="playstore2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Google_Play_Store_badge_EN.svg/2560px-Google_Play_Store_badge_EN.svg.png" alt="">
-              </div>
+            
             </div>
            
         </div>
