profile page navbar

--- a/prosperityWebApp/prosperity/templates/otp.html
+++ b/prosperityWebApp/prosperity/templates/otp.html
@@ -23,7 +23,9 @@
     
       <div class="row">
         <div class="col" >
-          <img class="r1" src="https://m-cdn.phonearena.com/images/phones/73688-350/Apple-iPhone-XS-Max.jpg" alt="">
+          {% load static %} <img style="width:450px" class="r1" src="{% static "media/Component21.jpg" %}" alt="home" />
+
+          {% comment %} <img class="r1" src="https://m-cdn.phonearena.com/images/phones/73688-350/Apple-iPhone-XS-Max.jpg" alt=""> {% endcomment %}
         </div>
         <div class="col">
             <div class="right-div">
