--- a/prosperityWebApp/prosperity/templates/index.html
+++ b/prosperityWebApp/prosperity/templates/index.html
@@ -23,7 +23,8 @@
     
       <div class="row">
         <div class="col" >
-          <img class="r1" src="https://m-cdn.phonearena.com/images/phones/73688-350/Apple-iPhone-XS-Max.jpg" alt="">
+          {% load static %} <img id="img" style="width:450px" class="r1" src="{% static "media/Component21.jpg" %}" alt="home" />
+          {% comment %} <img class="r1" src="https://m-cdn.phonearena.com/images/phones/73688-350/Apple-iPhone-XS-Max.jpg" alt=""> {% endcomment %}
         </div>
         <div class="col">
             <div class="right-div">
@@ -56,5 +57,13 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    {% comment %} <script type="text/javascript">
+              let img = document.getElementById('img');
+              let images = ['media/1.jpg','media/2.jpg','media/3.jpg','media/Component21.jpg']; 
+              setInterval(function(){
+                let random = Math.floor(Math.random()*4);
+                img.src = images[random];
+              }, 800)
+    </script> {% endcomment %}
   </body>
 </html>
