--- a/prosperityWebApp/prosperity/templates/profileDetails.html
+++ b/prosperityWebApp/prosperity/templates/profileDetails.html
@@ -1,89 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% include 'navbar.html' %}
     {% load static %}
-
+    {% include 'navbar.html' %}
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'profileDetails.css' %}">
+    {% load static %} <link rel="stylesheet" href="{% static 'profileDetails.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
 </head>
 <body>
-      <div class="grid-container" style="height:188px; background:#8381F7" class="boarder">
-        <div class="grid-item">
-            <img style="margin-left:140px;
-             margin-top:44px; 
-             background:#8381F7;
-              border-radius: 1000px;" class="pic" src="{% static "media/Rectangle 199.jpg" %}" alt="">
-        </div>
-        <div class="grid-item">
-            <p style="width: 247px;
-        height: 48px;
-        margin-left: 270px;
-        margin-top: -100px;
-        
-        font-family: 'Poppins';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 32px;
-        line-height: 48px; 
-        color: #F6F9FF;
-        " class="name">Swapnil Nikam</p>  
-        </div>
-        <div class="grid-item">
-            <p style="width: 200px;
-            height: 30px;
-            margin-left: 270px;
-            top: 208px;
-            
-            font-family: 'Poppins';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 20px;
-            line-height: 30px;
-            color: #F6F9FF;
-            ">UX Designer</p>
-        </div>
+    <div class="grid-container boarder" style="height:188px; background:#8381F7">
+        <div class="grid-item"><img class="pic" src="{% static "media/Rectangle 199.jpg" %}" alt=""></div>
+        <div class="grid-item"><p class="name">Swapnil Nikam</p></div>
+        <div class="grid-item"><p class="des">UX Designer</p></div>
     </div>
-    <div style="width:120px;height: 100px; background:#8381F7" class="boarder"></div>
-      <div style="width:120px;height: 700px; background:#8381F7" class="boarder">
-        <div>
-            <ul style="width: 251.18px;
-        height: 490px;
-        margin-left: 228.91px;
-        background: rgba(131, 129, 247, 0.4);">
-            <li style="height:68px; margin-left:20px"><a style="margin-left:10px; background:#ffff" href=""><i style="margin-right:10px; background:#fffff" class="bi-credit-card-2-front-fill"></i>Pesonal Details</a></li>
-            <li style="height:68px; margin-left:20px"><a href=""><i style="margin-right:10px; background:#fffff" class="bi-card-heading"></i>Documents</a></li>
-            <li style="height:68px; margin-left:20px"><a href=""><i style="margin-right:10px;" class="bi-shield-fill-plus"></i>My Coverage</a></li>
-            <li style="height:68px; margin-left:20px"><a href=""><i style="margin-right:10px;" class="bi-bell"></i>Notification</a></li>
-            <li style="height:68px; margin-left:20px"><a href=""><i style="margin-right:10px;" class="bi-cash"></i>Manage Payments</a></li>
-            <li style="height:68px; margin-left:20px"><a href=""><i style="margin-right:10px;" class="bi-chat-left-fill"></i>Feedback</a></li>
-            <li style="height:68px; margin-left:20px"><a href=""><i style="margin-right:10px;" class="bi-info-circle"></i>About Us</a></li>
-        </ul>
-        </div>
-        <div>
-            <button style="margin-left:233px;justify-content: center;
-            align-items: center;
-            padding: 0px;
-            gap: 10px;
-            margin-top: 50px;
-            margin-bottom: 4%;
-            width: 240px;
-            height: 50px;
-            border-radius: 10px;
-            flex: none;
-            order: 0;
-            flex-grow: 0;
-            background: #F6F9FF;
-            border: #5B6CAC solid 1px;" class="login"><a href="/otp"><p style="margin-top:10px">Log Out</p></a></button>
-      </div>
+    <div class="grid-container lower">
+        <div style="width:120px; height: 779px; background:#8381F7"></div>
 
+        <div class="leftbar">
+            <ul class="leftbarul">
+              <li><a style="background:#ffff" href=""><i class="bi-credit-card-2-front-fill"></i>Pesonal Details</a></li>
+              <li><a href=""><i  class="bi-card-heading"></i>Documents</a></li>
+              <li><a href=""><i  class="bi-shield-fill-plus"></i>My Coverage</a></li>
+              <li><a href=""><i  class="bi-bell"></i>Notification</a></li>
+              <li><a href=""><i  class="bi-cash"></i>Manage Payments</a></li>
+              <li><a href=""><i  class="bi-chat-left-fill"></i>Feedback</a></li>
+              <li><a href=""><i  class="bi-info-circle"></i>About Us</a></li>
+            </ul>
+            <div><button class="logout"><a href="/otp"><p style="margin-top:10px">Log Out</p></a></button></div>
+          </div>
+
+          <div class="rightgrid">
+            <ul class="rightcol">
+                <li class="rightcollist">
+                    <p>Name</p>
+                    <input style="margin-left: 20px;" type="text" placeHolder="Swapnil Nikam">
+                </li>
+                <li class="rightcollist">
+                    <p>Profession</p>
+                    <input style="margin-left: 20px;" type="text" placeHolder="UX Designer">
+                </li>
+                <li class="rightcollist">
+                    <p>Mobile Number</p>
+                    <i style="color:#475897; font-size:20px;" class="bi-telephone-fill"></i><input type="Number" placeHolder="+91 96198XXXXX">
+                </li>
+                <li class="rightcollist">
+                    <p>Email ID</p>
+                    <i style="color:#475897; font-size:20px;" class="bi-envelope-fill"></i><input type="Email" placeHolder="Your Email?">
+                </li>
+            </ul>
+          </div>
+    </div>
+    
+    {% comment %} <div style="width:120px;height: 700px; background:#8381F7"> {% endcomment %}
+        
+
+        
+    </div>
       
-
+      
       
 
 </body>
