--- a/prosperityWebApp/prosperity/templates/profileDetails.html
+++ b/prosperityWebApp/prosperity/templates/profileDetails.html
@@ -19,21 +19,18 @@
         <div class="grid-item"><p class="des">UX Designer</p></div>
     </div>
     <div class="grid-container lower">
-        <div style="width:120px; height: 779px; background:#8381F7"></div>
-
-        <div class="leftbar">
-            <ul class="leftbarul">
-              <li><a style="background:#ffff" href=""><i class="bi-credit-card-2-front-fill"></i>Pesonal Details</a></li>
-              <li><a href=""><i  class="bi-card-heading"></i>Documents</a></li>
-              <li><a href=""><i  class="bi-shield-fill-plus"></i>My Coverage</a></li>
-              <li><a href=""><i  class="bi-bell"></i>Notification</a></li>
-              <li><a href=""><i  class="bi-cash"></i>Manage Payments</a></li>
-              <li><a href=""><i  class="bi-chat-left-fill"></i>Feedback</a></li>
-              <li><a href=""><i  class="bi-info-circle"></i>About Us</a></li>
-            </ul>
-            <div><button class="logout"><a href="/otp"><p style="margin-top:10px">Log Out</p></a></button></div>
-          </div>
-
+        <div style="width:120px; height: 900px; background:#8381F7"></div>
+        
+        <div class="grid-container leftbar">
+             <a style="background:#ffff" class="grid-item" href="/profileDetails"><i class="bi-credit-card-2-front-fill"></i>Pesonal Details</a>
+             <a href="/profileDocuments" class="grid-item"><i  class="bi-card-heading"></i>Documents</a>
+             <a href="" class="grid-item" ><i  class="bi-shield-fill-plus"></i>My Coverage</a>
+             <a href="" class="grid-item" ><i  class="bi-bell"></i>Notification</a>
+             <a href="" class="grid-item" ><i  class="bi-cash"></i>Manage Payments</a>
+             <a href="" class="grid-item" ><i  class="bi-chat-left-fill"></i>Feedback</a>
+             <a href="" class="grid-item" ><i  class="bi-info-circle"></i>About Us</a>
+             <div style="margin-top: -10px"><button class="logout"><a href="/otp"><p style="margin-top:10px">Log Out</p></a></button></div>
+        </div>
           <div class="rightgrid">
             <ul class="rightcol">
                 <li class="rightcollist">
