profileCoverage Page done

--- a/prosperityWebApp/prosperity/static/navbar.css
+++ b/prosperityWebApp/prosperity/static/navbar.css
@@ -10,6 +10,7 @@ body {
 	border: none;
 	box-shadow: 0 0 4px rgba(0,0,0,.1);
     padding-right: 120px;
+	height: 110px;
 }
 .navbar img {
 	border-radius: 50%;
