--- a/prosperityWebApp/prosperity/templates/profileDocuments.html
+++ b/prosperityWebApp/prosperity/templates/profileDocuments.html
@@ -24,7 +24,7 @@
         <div class="grid-container leftbar">
             <a class="grid-item" href="/profileDetails"><i class="bi-credit-card-2-front-fill"></i>Pesonal Details</a>
             <a style="background:#ffff" href="/profileDocuments" class="grid-item"><i  class="bi-card-heading"></i>Documents</a>
-            <a href="" class="grid-item" ><i  class="bi-shield-fill-plus"></i>My Coverage</a>
+            <a href="/profileCoverage" class="grid-item" ><i  class="bi-shield-fill-plus"></i>My Coverage</a>
             <a href="" class="grid-item" ><i  class="bi-bell"></i>Notification</a>
             <a href="" class="grid-item" ><i  class="bi-cash"></i>Manage Payments</a>
             <a href="" class="grid-item" ><i  class="bi-chat-left-fill"></i>Feedback</a>
@@ -65,19 +65,6 @@
           </div>
 
        </div>
-
-          {% comment %} <div class="rightgrid">
-            <ul class="rightcol">
-                <li class="rightcollist">
-                    
-                    <input style="margin-left: 20px;" type="Number" placeHolder="Aadhar Card">
-                </li>
-                <li class="rightcollist">
-                    <p>Profession</p>
-                    <input style="margin-left: 20px;" type="text" placeHolder="Pan Card">
-                </li>
-            </ul>
-          </div> {% endcomment %}
     </div>     
 
         
