--- a/prosperityWebApp/prosperity/templates/navbar.html
+++ b/prosperityWebApp/prosperity/templates/navbar.html
@@ -21,7 +21,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-xl navbar-dark">
+    <nav style="height:110px;" class="navbar navbar-expand-xl navbar-dark">
         <a style="color:#5B6CAC; font-size:40px; font-width:10px" href="#" class="navbar-brand"><b>Prosperity</b></a>  		
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
