--- a/prosperityWebApp/prosperity/templates/profileCoverage.html
+++ b/prosperityWebApp/prosperity/templates/profileCoverage.html
@@ -25,7 +25,7 @@
             <a class="grid-item" href="/profileDetails"><i class="bi-credit-card-2-front-fill"></i>Pesonal Details</a>
             <a href="/profileDocuments" class="grid-item"><i  class="bi-card-heading"></i>Documents</a>
             <a style="background: #ffff" href="/profileCoverage" class="grid-item" ><i  class="bi-shield-fill-plus"></i>My Coverage</a>
-            <a href="" class="grid-item" ><i  class="bi-bell"></i>Notification</a>
+            <a href="/profileNotification" class="grid-item" ><i  class="bi-bell"></i>Notification</a>
             <a href="" class="grid-item" ><i  class="bi-cash"></i>Manage Payments</a>
             <a href="" class="grid-item" ><i  class="bi-chat-left-fill"></i>Feedback</a>
             <a href="" class="grid-item" ><i  class="bi-info-circle"></i>About Us</a>
@@ -143,48 +143,3 @@
       
 </body>
 </html>
-
- {% comment %} <div style="
-                display: grid; 
-                grid-template-columns: auto auto auto;" 
-                class="grid-container protection">
-                
-                <img style="   
-                margin-top: -152px;
-                margin-left: -222px;"
-                    src="{% static "media/Group 185.jpg" %}" alt="">
-
-                <div style="
-                    display: grid; 
-                    grid-template-columns: auto;" 
-                 class="grid-container">
-                         
-                </div>
-                
-                <div>
-
-                </div>
-                
-            </div>  {% endcomment %}
-
-{% comment %} style="   
-margin-top: -339px;
-height: 20px;
-margin-left: -193px;    grid-template-columns: auto;" {% endcomment %}
-
-{% comment %} 
-style="
-       display: grid;
-       grid-template-columns: auto;
-       margin-left: 102px;
-       margin-top: 34px;
-       flex-direction: column;
-       justify-content: center;
-       align-items: center;
-       padding: 0px;
-       gap: 14.6px;
-       width: 505.18px;
-       height: 457px;
-       background: #FFFFFF;
-       box-shadow: 0px 2.92013px 29.2013px rgba(44, 88, 255, 0.2);
-       border-radius: 14.6006px;"  {% endcomment %}
