--- a/prosperityWebApp/prosperity/templates/profileDocuments.html
+++ b/prosperityWebApp/prosperity/templates/profileDocuments.html
@@ -25,7 +25,7 @@
             <a class="grid-item" href="/profileDetails"><i class="bi-credit-card-2-front-fill"></i>Pesonal Details</a>
             <a style="background:#ffff" href="/profileDocuments" class="grid-item"><i  class="bi-card-heading"></i>Documents</a>
             <a href="/profileCoverage" class="grid-item" ><i  class="bi-shield-fill-plus"></i>My Coverage</a>
-            <a href="" class="grid-item" ><i  class="bi-bell"></i>Notification</a>
+            <a href="/profileNotification" class="grid-item" ><i  class="bi-bell"></i>Notification</a>
             <a href="" class="grid-item" ><i  class="bi-cash"></i>Manage Payments</a>
             <a href="" class="grid-item" ><i  class="bi-chat-left-fill"></i>Feedback</a>
             <a href="" class="grid-item" ><i  class="bi-info-circle"></i>About Us</a>
