Add payment Pages done

--- a/prosperityWebApp/prosperity/templates/profileNotification.html
+++ b/prosperityWebApp/prosperity/templates/profileNotification.html
@@ -24,9 +24,9 @@
         <div class="grid-container leftbar">
             <a class="grid-item" href="/profileDetails"><i class="bi-credit-card-2-front-fill"></i>Pesonal Details</a>
             <a href="/profileDocuments" class="grid-item"><i  class="bi-card-heading"></i>Documents</a>
-            <a class="grid-item" ><i  class="bi-shield-fill-plus"></i>My Coverage</a>
-            <a style="background: #ffff" href="/profileCoverage" href="" class="grid-item" ><i  class="bi-bell"></i>Notification</a>
-            <a href="/profileNotification" class="grid-item" ><i  class="bi-cash"></i>Manage Payments</a>
+            <a class="grid-item" href="/profileCoverage" ><i  class="bi-shield-fill-plus"></i>My Coverage</a>
+            <a style="background: #ffff" href="/profileNotification"  class="grid-item" ><i  class="bi-bell"></i>Notification</a>
+            <a href="/profilePayments" class="grid-item" ><i  class="bi-cash"></i>Manage Payments</a>
             <a href="" class="grid-item" ><i  class="bi-chat-left-fill"></i>Feedback</a>
             <a href="" class="grid-item" ><i  class="bi-info-circle"></i>About Us</a>
             <div style="margin-top: -10px"><button class="logout"><a href="/otp"><p style="margin-top:10px">Log Out</p></a></button></div>
