--- a/prosperityWebApp/prosperity/templates/profileDetails.html
+++ b/prosperityWebApp/prosperity/templates/profileDetails.html
@@ -26,7 +26,7 @@
              <a href="/profileDocuments" class="grid-item"><i  class="bi-card-heading"></i>Documents</a>
              <a href="/profileCoverage" class="grid-item" ><i  class="bi-shield-fill-plus"></i>My Coverage</a>
              <a href="/profileNotification" class="grid-item" ><i  class="bi-bell"></i>Notification</a>
-             <a href="" class="grid-item" ><i  class="bi-cash"></i>Manage Payments</a>
+             <a href="/profilePayments" class="grid-item" ><i  class="bi-cash"></i>Manage Payments</a>
              <a href="" class="grid-item" ><i  class="bi-chat-left-fill"></i>Feedback</a>
              <a href="" class="grid-item" ><i  class="bi-info-circle"></i>About Us</a>
              <div style="margin-top: -10px"><button class="logout"><a href="/otp"><p style="margin-top:10px">Log Out</p></a></button></div>
