--- a/prosperityWebApp/prosperity/templates/profiles/profileDetails.html
+++ b/prosperityWebApp/prosperity/templates/profiles/profileDetails.html
@@ -8,12 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %} <link rel="stylesheet" href="{% static 'profileDetails.css' %}">
-    {% load static %} <link rel="stylesheet" href="{% static 'profileAbout.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
 </head>
-<body style="background: #F6F9FF">
+<body>
     <div class="grid-container boarder" style="height:188px; background:#8381F7">
         <div class="grid-item"><img class="pic" src="{% static "media/Rectangle 199.jpg" %}" alt=""></div>
         <div class="grid-item"><p class="name">Swapnil Nikam</p></div>
@@ -23,23 +22,40 @@
         <div style="width:120px; height: 900px; background:#8381F7"></div>
         
         <div class="grid-container leftbar">
-             <a class="grid-item" href="/profileDetails"><i class="bi-credit-card-2-front-fill"></i>Pesonal Details</a>
+             <a style="background:#ffff" class="grid-item" href="/profileDetails"><i class="bi-credit-card-2-front-fill"></i>Pesonal Details</a>
              <a href="/profileDocuments" class="grid-item"><i  class="bi-card-heading"></i>Documents</a>
              <a href="/profileCoverage" class="grid-item" ><i  class="bi-shield-fill-plus"></i>My Coverage</a>
              <a href="/profileNotification" class="grid-item" ><i  class="bi-bell"></i>Notification</a>
              <a href="/profilePayments" class="grid-item" ><i  class="bi-cash"></i>Manage Payments</a>
              <a href="/profileFeedback" class="grid-item" ><i  class="bi-chat-left-fill"></i>Feedback</a>
-             <a style="background:#ffff" href="/profileAbout" class="grid-item" ><i  class="bi-info-circle"></i>About Us</a>
-             <div style="margin-top: -10px"><button class="logout"><a href="/otp"><p style="margin-top:10px">Log Out</p></a></button></div>
+             <a href="/profileAbout" class="grid-item" ><i  class="bi-info-circle"></i>About Us</a>
+             <div style="margin-top: -10px"><button class="logout"><a href="/"><p style="margin-top:10px">Log Out</p></a></button></div>
         </div>
-          
-        <div id="about">
-            <img id="thumsup" src="{% static "media/Vector.png" %}" alt="">
-            <p id="p1">Thank You </p>
-            <p id="p2">Your feedback is helpfull for us</p>
-        </div>
-       
+          <div class="rightgrid">
+            <ul class="rightcol">
+                <li class="rightcollist">
+                    <p>Name</p>
+                    <input style="margin-left: 20px;" type="text" placeHolder="Swapnil Nikam">
+                </li>
+                <li class="rightcollist">
+                    <p>Profession</p>
+                    <input style="margin-left: 20px;" type="text" placeHolder="UX Designer">
+                </li>
+                <li class="rightcollist">
+                    <p>Mobile Number</p>
+                    <i style="color:#475897; font-size:20px;" class="bi-telephone-fill"></i><input type="Number" placeHolder="+91 96198XXXXX">
+                </li>
+                <li class="rightcollist">
+                    <p>Email ID</p>
+                    <i style="color:#475897; font-size:20px;" class="bi-envelope-fill"></i><input type="Email" placeHolder="Your Email?">
+                </li>
+            </ul>
+          </div>
     </div>
+    
+    {% comment %} <div style="width:120px;height: 700px; background:#8381F7"> {% endcomment %}
+        
+
         
     </div>
       
