--- a/prosperityWebApp/prosperity/templates/profiles/profileNotification.html
+++ b/prosperityWebApp/prosperity/templates/profiles/profileNotification.html
@@ -29,7 +29,7 @@
             <a href="/profilePayments" class="grid-item" ><i  class="bi-cash"></i>Manage Payments</a>
             <a href="/profileFeedback" class="grid-item" ><i  class="bi-chat-left-fill"></i>Feedback</a>
             <a href="/profileAbout" class="grid-item" ><i  class="bi-info-circle"></i>About Us</a>
-            <div style="margin-top: -10px"><button class="logout"><a href="/otp"><p style="margin-top:10px">Log Out</p></a></button></div>
+            <div style="margin-top: -10px"><button class="logout"><a href="/"><p style="margin-top:10px">Log Out</p></a></button></div>
        </div>
        
        <div id="notification_main" class="grid-container">
